feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/keys/mapping.json
+++ b/figma/locales/keys/mapping.json
@@ -1,4 +1,9 @@
 [{
+  "key":"tuesday_1",
+  "value":"tuesday",
+  "nodeID":"node_id.126:4",
+  "lastChanged":1762255956
+},{
   "key":"monday_1",
   "value":"monday",
   "nodeID":"node_id.125:3",
