--- a/figma/locales/keys/mapping.json
+++ b/figma/locales/keys/mapping.json
@@ -4,6 +4,11 @@
   "nodeID":"node_id.126:4",
   "lastChanged":1762255956
 },{
+  "key":"mouse_1",
+  "value":"mouse",
+  "nodeID":"node_id.205:13",
+  "lastChanged":1762261477
+},{
   "key":"monday_1",
   "value":"monday",
   "nodeID":"node_id.125:3",
