feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/keys/mapping.json
+++ b/figma/locales/keys/mapping.json
@@ -5,9 +5,9 @@
   "lastChanged":1762255956
 },{
   "key":"mouse_1",
-  "value":"mouse",
+  "value":"mouse caught by a cat",
   "nodeID":"node_id.205:13",
-  "lastChanged":1762261477
+  "lastChanged":1762261684
 },{
   "key":"monday_1",
   "value":"monday",
