feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/keys/mapping.json
+++ b/figma/locales/keys/mapping.json
@@ -4,6 +4,11 @@
   "nodeID":"node_id.126:4",
   "lastChanged":1762255956
 },{
+  "key":"four_1",
+  "value":"four",
+  "nodeID":"node_id.118:12",
+  "lastChanged":1762263523
+},{
   "key":"mouse_1",
   "value":"dog 33",
   "nodeID":"node_id.205:13",
