--- a/figma/locales/en/translation.json
+++ b/figma/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "node_id.125:3": "monday",
     "node_id.126:4": "tuesday",
-    "node_id.205:13": "dog 33"
+    "node_id.205:13": "dog 33",
+    "node_id.118:12": "four"
 }
