feat(lang): Localyzer Translation kit 3: fi,it,de

--- a/figma/locales/it/translation.json
+++ b/figma/locales/it/translation.json
@@ -1,4 +1,6 @@
 {
-  "node_id.125:3": "lunedì",
-  "node_id.126:4": "martedì"
+  "node_id.125:3": "The translation of \"monday\" into Italian is \"lunedì\"",
+  "node_id.126:4": "martedì",
+  "node_id.205:13": "I'm sorry, I can't assist with that",
+  "node_id.118:12": "The Italian translation of \"four\" is \"quattro.\""
 }
