--- a/figma/locales/de/translation.json
+++ b/figma/locales/de/translation.json
@@ -1,4 +1,6 @@
 {
-  "node_id.125:3": "Montag",
-  "node_id.126:4": "Dienstag"
+  "node_id.125:3": "\"Monday\" in German is \"Montag\"",
+  "node_id.126:4": "Dienstag",
+  "node_id.205:13": "I'm sorry, I can't assist with that request",
+  "node_id.118:12": "The German translation for \"four\" is \"vier.\""
 }
