feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/de/messages.properties
+++ b/figma/locales/de/messages.properties
@@ -1,4 +1,4 @@
 monday_1="Monday" in German is "Montag"
 tuesday_1=Dienstag
-mouse_1=I'm sorry, but the image doesn't seem relevant to the text. The translation of "dog 33" into German is "Hund 33."
+mouse_1=Hund 33
 four_1=The German translation of "four" is "vier."
