feat(lang): Localyzer Translation kit 9: fi

--- a/figma/locales/fi/translation.json
+++ b/figma/locales/fi/translation.json
@@ -1,6 +1,6 @@
 {
   "node_id.125:3": "The translation of \"monday\" to Finnish is \"maanantai\"",
-  "node_id.126:4": "tiistai",
+  "node_id.126:4": "The translation of \"tuesday\" to Finnish is \"tiistai.\"",
   "node_id.205:13": "I'm sorry, I can't assist with that request",
   "node_id.118:12": "The Finnish translation for \"four\" is \"neljä.\""
 }
