feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/de/messages.properties
+++ b/figma/locales/de/messages.properties
@@ -1,4 +1,4 @@
 monday_1="Monday" in German is "Montag"
 tuesday_1=Dienstag
 mouse_1=Hund 33
-four_1=The German translation of "four" is "vier."
+four_1=Vier
