feat(lang): intermediary files for Figma2Dev

--- a/figma/locales/it/messages.properties
+++ b/figma/locales/it/messages.properties
@@ -1,4 +1,4 @@
-monday_1=The translation of "monday" into Italian is "lunedì"
-tuesday_1=martedì
-mouse_1=I'm sorry, I can't assist with that
-four_1=The Italian translation of "four" is "quattro."
+monday_1=lunedì
+tuesday_1=Martedì
+mouse_1=cane 33
+four_1=quattro
